// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Linux Virtual Machine Example renders the Azure Linux Virtual Machine and checks snapshot 1`] = `
"{
  "output": {
    "resource_group_name": {
      "value": "\${azurerm_resource_group.rg.name}"
    },
    "vm_endpoint": {
      "value": "\${azurerm_public_ip.vm_public-ip_08BDE77B.ip_address}"
    },
    "vm_name": {
      "value": "\${azurerm_linux_virtual_machine.vm_0F55393D.name}"
    },
    "vm_size": {
      "value": "Standard_B1s"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_linux_virtual_machine": {
      "vm_0F55393D": {
        "admin_password": "Password1234!",
        "admin_username": "testadmin",
        "disable_password_authentication": false,
        "location": "eastus",
        "name": "my-vm",
        "network_interface_ids": [
          "\${azurerm_network_interface.vm_nic_82143599.id}"
        ],
        "os_disk": {
          "caching": "ReadWrite",
          "storage_account_type": "Standard_LRS"
        },
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "size": "Standard_B1s",
        "source_image_reference": {
          "offer": "0001-com-ubuntu-server-jammy",
          "publisher": "Canonical",
          "sku": "22_04-lts-gen2",
          "version": "latest"
        },
        "user_data": "IyEvYmluL2Jhc2gKc3VkbyBhcHQtZ2V0IGluc3RhbGwgLXkgYXBhY2hlMg=="
      }
    },
    "azurerm_network_interface": {
      "vm_nic_82143599": {
        "ip_configuration": [
          {
            "name": "internal",
            "private_ip_address_allocation": "Dynamic",
            "public_ip_address_id": "\${azurerm_public_ip.vm_public-ip_08BDE77B.id}",
            "subnet_id": "\${azurerm_subnet.subnet1.id}"
          }
        ],
        "location": "eastus",
        "name": "nic-my-vm",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_public_ip": {
      "vm_public-ip_08BDE77B": {
        "allocation_method": "Static",
        "location": "eastus",
        "name": "pip-my-vm",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-test"
      }
    },
    "azurerm_subnet": {
      "subnet1": {
        "address_prefixes": [
          "10.0.1.0/24"
        ],
        "name": "subnet1",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "virtual_network_name": "\${azurerm_virtual_network.vnet.name}"
      }
    },
    "azurerm_virtual_network": {
      "vnet": {
        "address_space": [
          "10.0.0.0/16"
        ],
        "location": "\${azurerm_resource_group.rg.location}",
        "name": "vnet-test",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Azure Linux Virtual Machine With Defaults renders an Azure Linux Virtual Machine with defaults and checks snapshot 1`] = `
"{
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_linux_virtual_machine": {
      "testVirtualMachine_vm_3FD746F5": {
        "admin_username": "admintestAzureVMWithDefaults",
        "disable_password_authentication": true,
        "location": "eastus",
        "name": "testAzureVMWithDefaults",
        "network_interface_ids": [
          "\${azurerm_network_interface.testVirtualMachine_nic_45477852.id}"
        ],
        "os_disk": {
          "caching": "ReadWrite",
          "storage_account_type": "Standard_LRS"
        },
        "resource_group_name": "testResourceGroup",
        "size": "Standard_B2s",
        "source_image_reference": {
          "offer": "WindowsServer",
          "publisher": "MicrosoftWindowsServer",
          "sku": "2022-Datacenter-Core",
          "version": "latest"
        }
      }
    },
    "azurerm_network_interface": {
      "testVirtualMachine_nic_45477852": {
        "ip_configuration": [
          {
            "name": "internal",
            "private_ip_address_allocation": "Dynamic",
            "subnet_id": "\${azurerm_subnet.testVirtualMachine_vnet_default_4A281376.id}"
          }
        ],
        "location": "eastus",
        "name": "nic-testAzureVMWithDefaults",
        "resource_group_name": "testResourceGroup"
      }
    },
    "azurerm_subnet": {
      "testVirtualMachine_vnet_default_4A281376": {
        "address_prefixes": [
          "10.1.0.0/24"
        ],
        "name": "default",
        "resource_group_name": "testResourceGroup",
        "virtual_network_name": "\${azurerm_virtual_network.testVirtualMachine_vnet_vnet-testAzureVMWithDefaults_B2341822.name}"
      }
    },
    "azurerm_virtual_network": {
      "testVirtualMachine_vnet_vnet-testAzureVMWithDefaults_B2341822": {
        "address_space": [
          "10.0.0.0/16"
        ],
        "location": "eastus",
        "name": "vnet-testAzureVMWithDefaults",
        "resource_group_name": "testResourceGroup"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;
